--- a/.env
+++ b/.env
@@ -1,3 +1,5 @@
 $Global:TDD_TEMPLATE=0
 $Global:EXTRA_PACKAGES="C:\Program Files (x86)\Windows Kits\10\Assessment and Deployment Kit\Windows Preinstallation Environment\amd64\WinPE_OCs"
 $Global:LAST_TIME_CUMULATIVE_UPDATES = 'D:\\AplicTRE\\CUMULATIVE_UPDATES'
+$Global:WINPE_MOUNT_DIR = 'D:\\AplicTRE\\WINPE_MOUNT'
+$Global:WIM_BKP_DIR = 'D:\\AplicTRE\\WIM_BKP'
